--- a/pages/terms.mdx
+++ b/pages/terms.mdx
@@ -6,4 +6,4 @@ container: true
 searchable: false
 ---
 
-<iframe src="https://payhip.com/SapiensIA/services" width="100%" height="800"> </iframe>
+<iframe src="https://sapienslaboratories.com" width="100%" height="800"> </iframe>
