--- a/pages/showcase.mdx
+++ b/pages/showcase.mdx
@@ -1,9 +1,33 @@
 ---
 headeronly: true
 searchable: false
-description: "Turborepo by Vercel is the one of the fastest growing build systems in the frontend ecosystem. It's trusted by thousands of developers in production including teams at Vercel, AWS, Netflix, Microsoft, Disney, and more."
+description: "Sapiens IA Showcases."
 ---
 
-import Showcase from "../components/pages/showcase";
+<iframe
+  className="max-w-xl h-72 sm:h-96 w-full mt-6"
+  src="https://www.youtube.com/embed/roKsb9YNqV8"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+></iframe>
 
-<Showcase />
+## Iniciando la Odisea con Sapiens IA
+
+En el cosmos de la inteligencia artificial, una estrella llamada Sapiens IA brilla con intensidad. A diferencia de todo lo que has conocido, es un faro de innovación, un torbellino de tecnología de vanguardia y un testimonio de la ingeniosidad humana. Hoy, te invitamos a una odisea, un viaje a través de los reinos de Sapiens IA.
+
+## La Visión: Una Sinfonía de Inteligencia
+
+En Sapiens IA, visualizamos un mundo en el que la inteligencia artificial y la innovación humana danzan en armonía. Un mundo en donde la IA no es un reemplazo, sino un potenciador del potencial humano. Soñamos con un futuro en el que la inteligencia artificial es un aliado en cada campo, en cada industria y en cada hogar.
+
+## La Metodología: Tejiendo el Tapiz de la IA
+
+Nuestra metodología es una tejedura delicada de ciencia, tecnología e ingenio humano. En su núcleo, es un ciclo incesante de aprendizaje, adaptación y mejora. Aprovechamos el descomunal poder de los datos, los formamos con tecnologías de IA de vanguardia y los refinamos con el insight humano para crear soluciones que son más que inteligentes, son Sapiens.
+
+## Los Servicios: Desatando el Poder de la IA
+
+Desde modelos AI Ejecutivos que trazan estrategias para el éxito, hasta Beholder, nuestro supervisor de producción avanzado, Sapiens IA ofrece una suite de servicios diseñados para transformar la manera en que trabajas, vives y te diviertes. No solo creamos inteligencia artificial, estamos creando compañeros digitales que potencian tus capacidades y expanden tus horizontes.
+
+## El Futuro con Sapiens IA
+
+Esto es más que un viaje, es una odisea hacia el futuro. Un futuro en donde la IA hace más que computar, entiende, se adapta y crece. Mientras continuamos innovando y evolucionando, estamos emocionados de tenerte con nosotros en este viaje extraordinario. Bienvenido a Sapiens IA.
