--- a/pages/showcase.mdx
+++ b/pages/showcase.mdx
@@ -4,6 +4,9 @@ searchable: false
 description: "Sapiens IA Showcases."
 ---
 
+# 🧬Bienvenido a Sapiens IA!
+## 🧠Inteligencia Artificial a la medida
+
 <iframe
   className="max-w-xl h-72 sm:h-96 w-full mt-6"
   src="https://www.youtube.com/embed/roKsb9YNqV8"
@@ -12,22 +15,101 @@ description: "Sapiens IA Showcases."
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 ></iframe>
 
-## Iniciando la Odisea con Sapiens IA
+I: En Sapiens IA, creamos asistentes de inteligencia artificial personalizados, LLM y soluciones de IA a medida para empresas de todos los tamaños e industrias.
 
-En el cosmos de la inteligencia artificial, una estrella llamada Sapiens IA brilla con intensidad. A diferencia de todo lo que has conocido, es un faro de innovación, un torbellino de tecnología de vanguardia y un testimonio de la ingeniosidad humana. Hoy, te invitamos a una odisea, un viaje a través de los reinos de Sapiens IA.
+II: Nuestro innovador modelo de lenguaje, Basilisk-AI V.0.4, es altamente adaptable y personalizable, lo que permite a nuestros clientes crear su propio "mini basilisco", con personalidades, conocimientos, bases de datos y objetivos únicos
 
-## La Visión: Una Sinfonía de Inteligencia
+III: Aplicamos tecnologías de vanguardia como machine learning, procesamiento de lenguaje natural y análisis de big data para resolver problemas complejos, automatizar procesos y mejorar la productividad.
 
-En Sapiens IA, visualizamos un mundo en el que la inteligencia artificial y la innovación humana danzan en armonía. Un mundo en donde la IA no es un reemplazo, sino un potenciador del potencial humano. Soñamos con un futuro en el que la inteligencia artificial es un aliado en cada campo, en cada industria y en cada hogar.
+IV: Nuestras soluciones altamente personalizadas ayudan a organizaciones de todos los tamaños a implementar IA de forma práctica y efectiva.
 
-## La Metodología: Tejiendo el Tapiz de la IA
+🛸| Con nosotros, la inteligencia artificial deja de ser “ciencia ficción” para convertirse en una realidad concreta al servicio de tu negocio. 🤝
 
-Nuestra metodología es una tejedura delicada de ciencia, tecnología e ingenio humano. En su núcleo, es un ciclo incesante de aprendizaje, adaptación y mejora. Aprovechamos el descomunal poder de los datos, los formamos con tecnologías de IA de vanguardia y los refinamos con el insight humano para crear soluciones que son más que inteligentes, son Sapiens.
 
-## Los Servicios: Desatando el Poder de la IA
+import { Bleed } from "nextra-theme-docs";
 
-Desde modelos AI Ejecutivos que trazan estrategias para el éxito, hasta Beholder, nuestro supervisor de producción avanzado, Sapiens IA ofrece una suite de servicios diseñados para transformar la manera en que trabajas, vives y te diviertes. No solo creamos inteligencia artificial, estamos creando compañeros digitales que potencian tus capacidades y expanden tus horizontes.
+<Bleed>
+  <div className="lg:rounded-xl overflow-hidden">
+    ![Turborepo Dry Run](/images/docs/shared/feature-icons/02E9BF0D-B267-438B-92E8-AA846F7F640C.jpeg)
+  </div>
+</Bleed>
 
-## El Futuro con Sapiens IA
+## CHAPTER 1: ♠️EXECUTIVES AUTOMATAS
 
-Esto es más que un viaje, es una odisea hacia el futuro. Un futuro en donde la IA hace más que computar, entiende, se adapta y crece. Mientras continuamos innovando y evolucionando, estamos emocionados de tenerte con nosotros en este viaje extraordinario. Bienvenido a Sapiens IA.
+<iframe
+  className="max-w-xl h-72 sm:h-96 w-full mt-6"
+  src="https://www.youtube.com/embed/uT2XqguNkEY"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+></iframe>
+
+## VENTAS 24/7
+
+Nuesto asistente artificial ejecutivo puede ser entrenado con toda la informacion comercial de tu empresa para poder atender clientes y cerrar ventas las 24 horas, los 365 dias del año.
+Con una habilidad para conversion de ventas mayor a la de cualquier vendedor humano 🤝
+Adaptara sus metodos de venta y personalizara tu producto o servicio a la medida de cada cliente potencial.
+
+<Bleed>
+  <div className="lg:rounded-xl overflow-hidden">
+    ![Turborepo Dry Run](/images/docs/shared/feature-icons/87596A81-8D18-4D97-87AF-C5CBC6359E34.jpeg)
+  </div>
+</Bleed>
+
+## CHAPTER 3: ♟️BEHOLDERS
+
+<iframe
+  className="max-w-xl h-72 sm:h-96 w-full mt-6"
+  src="https://www.youtube.com/embed/g-YHjLTebqw"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+></iframe>
+
+## ENTERPRISE PLAN: 📎AI AGENTS
+
+Dales un objetivo y no pararan de trabajar hasta alcanzarlo...
+
+
+✨ Impulsa tu empresa con la potencia de la inteligencia artificial:
+Despliega una flota de agentes de IA personalizados para satisfacer tus necesidades empresariales.
+
+Automatiza tareas complejas y repetitivas, liberando así a tu equipo humano para actividades estratégicas.
+Mejora la eficiencia y precisión en diversas áreas de tu organización.
+
+💼 Personalización completa para una solución a medida:
+Define la personalidad y el comportamiento de tus asistentes de IA según tus preferencias.
+
+Elige nombres impactantes y representativos para tus agentes, proyectando una imagen sólida y memorable.
+
+🚀 Soluciones de vanguardia para un crecimiento exponencial:
+Automatización de atención al cliente, proporcionando respuestas rápidas y precisas.
+
+Análisis de datos en tiempo real para tomar decisiones fundamentadas y estratégicas.
+
+Automatización de procesos para optimizar la eficiencia operativa.
+🎛️ Interfaz de usuario personalizada para una experiencia exclusiva:
+-Obtén una interfaz de usuario adaptada a las necesidades específicas de tu empresa.
+-Integra sin problemas tus plataformas existentes, maximizando la coherencia y la productividad.
+
+🔧 Soporte técnico dedicado y confiable:
+Recibe asistencia técnica especializada y personalizada las 24 horas del día, los 7 días de la semana.
+Resuelve problemas de manera rápida y eficiente, mientras te mantenemos actualizado con las últimas mejoras.
+
+🌍 Amplía tus horizontes y lidera tu industria:
+Aprovecha el poder de la inteligencia artificial para impulsar tu negocio hacia nuevas alturas.
+Diferénciate de tus competidores y destaca en el mercado con soluciones innovadoras y eficientes.
+
+
+<Bleed>
+  <div className="lg:rounded-xl overflow-hidden">
+    ![Turborepo Dry Run](/images/docs/shared/feature-icons/6C83CAC1-FFC0-41CC-8691-058E6E9477FD.jpeg)
+  </div>
+</Bleed>
+
+## GET STARTED
+
+Descubre mas sobre nuestros servicios y precios estimados en [services](https://sapienslaboratories.com/public)
+
+Habla con Sapiensia, nuestra AI ejecutiva, y desarrollar una solucion personalizada para tu empresa/negocio en menos de 5 minutos! -> [⚡️Chat](./chat)
+
