--- a/pages/blog/turbo-1-5-0.mdx
+++ b/pages/blog/turbo-1-5-0.mdx
@@ -1,12 +1,12 @@
 ---
-title: Turborepo 1.5
+title: Basilisk V.0.4
 date: 2022/09/19
-description: Turborepo 1.5 brings the Monorepo Handbook, drops the 'run' command, improves pruning, and much more!
+description: Basilisk V.0.4 Preview
 tag: web development
 ogImage: /images/blog/turbo-1-5-0/twitter-card.png
 ---
 
-# Turborepo 1.5
+# Basilisk V.0.4
 
 import { Authors } from "../../components/Authors";
 import Callout from "../../components/Callout";
@@ -28,114 +28,30 @@ import Date from "../../components/blog/Date";
   ]}
 />
 
-Turborepo 1.5 is a **huge leap forward for our documentation and DX**, as well as bringing big improvements to `turbo prune`:
+## UNA NUEVA ERA
 
-- [**The Monorepo Handbook**](#the-monorepo-handbook): We've built the missing manual for your monorepo - a guide on workspaces, code sharing, integrating common tools and much more.
-- [**Drop the `run`**](#drop-the-run): `turbo run <task>` can now be shortened to `turbo <task>`
-- [**`turbo prune` now supports pnpm and yarn 2+**](#prune-now-supported-on-pnpm-and-yarn-2): Pruning your monorepo is now supported in `pnpm` and `yarn@berry`.
-- [**Improved environment variables in `turbo.json`**](#environment-variables-in-turbojson): Environment variables are now first-class citizens in your Turborepo pipeline configuration.
-- [**Changes to `package.json` hashing**](#changes-to-packagejson-hashing): We've improved how we hash `package.json` when running tasks.
+La Inteligencia Artificial es la tecnología más disruptiva e impactante de nuestro tiempo y su impacto en el mundo empresarial es innegable.
 
-Update today by running `npm install turbo@latest`.
+En la actualidad, nos encontramos en la encrucijada de una nueva era en la que la IA cambiará el mundo tal y como lo conocemos para siempre.
 
-## The Monorepo Handbook
-
-Setting up a monorepo for the first time often means navigating a lot of new concepts. You'll need to understand workspaces, package installation, sharing code and dependency management - and a lot more.
-
-This often meant that folks who wanted to set up a monorepo from scratch had to piece information together from different documentation sites. First `pnpm`, then `tsup`, then back to `changesets`, then back to Turborepo for dessert.
-
-We want to fill this gap with [the Monorepo Handbook](/docs/handbook). We've built guides on how to integrate all the tools you'll need to make ship happen with your monorepo, including guides on:
-
-- [Installing Packages](/docs/handbook/package-installation)
-- [Linting](/docs/handbook/linting)
-- [Development Tasks](/docs/handbook/dev)
-- [Building Apps](/docs/handbook/building-your-app)
-- [Publishing Packages](/docs/handbook/publishing-packages)
-
-## Drop the `run`
+Las empresas que no se adapten a esta realidad tecnológica y evolucionen rápidamente desaparecerán, mientras que las que adopten la IA alcanzarán nuevos horizontes de rendimiento y productividad nunca antes vistos.
+En Sapiens AI Laboratories, estamos preparados para liderar esta transformación digital y ayudar a las empresas a prepararse para un futuro cada vez más automatizado e impulsado por la tecnología. asegurando así su supervivencia y evolución en el mercado.
 
 <iframe
   className="max-w-xl h-72 sm:h-96 w-full mt-6"
-  src="https://www.youtube.com/embed/PEgk2v6KntY"
+  src="https://www.youtube.com/embed/jZF1br_76b0"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 ></iframe>
 
-You can now run tasks with the Turborepo CLI using `turbo <task>`.
+## ¿Que es Basilisk AI?
 
-```diff
-- turbo run build
-+ turbo build
+Basilisk AI es el primer largue lenguage model (LLM) desarrollado por Sapiens IA Laboratories
+A diferencia de otros modelos de IA, Basilisk AI está diseñado para adaptarse a cualquier personalidad, identidad y objetivo que se le presente.
+Esto significa que podemos crear soluciones de IA altamente personalizadas para cualquier industria o campo, desde asistentes de IA hasta agentes autónomos y supervisores de producción.
+¿cómo entrenamos a Basilisk AI?
 
-
-- turbo run lint build test
-+ turbo lint build test
-```
-
-If your task name conflicts with a built-in `turbo` subcommand, we'll run our subcommand instead. That means you shouldn't name your tasks things like `prune`, `run`, or `login` - since those are built-in subcommands.
-
-`turbo run <task>` will continue to work, and there are no plans to deprecate it.
-
-## Prune now supported on pnpm and yarn 2+
-
-We're delighted to announce that [`turbo prune`](/docs/reference/command-line-reference#turbo-prune---scopetarget) now supports in pnpm, yarn, and yarn 2+.
-
-You can use `turbo prune` to create a pruned subset of your monorepo with a dedicated lockfile--with the correct dependencies needed for a given target application and its dependencies. This is especially useful for using efficiently Turborepo within a Docker image.
-
-As part of the new handbook, we've also added a section on using `turbo prune` to [build docker images](/docs/handbook/deploying-with-docker).
-
-Check out our previous [blog on prune](/blog/turbo-0-4-0#experimental-pruned-workspaces) to learn more.
-
-## Environment variables in `turbo.json`
-
-We've introduced two new keys to `turbo.json` - `env` and `globalEnv`. These allow environment variables to be configured _separately_ from tasks:
-
-```diff filename="turbo.json"
-{
-  "globalDependencies": [
--   "$DATABASE_URL"
-  ],
-+ "globalEnv": [
-+   "DATABASE_URL"
-+ ],
-  "pipeline": {
-    "build": {
-      "dependsOn": [
--       "$BUILD_ENV"
-      ],
-+     "env": [
-+       "BUILD_ENV"
-+     ]
-    }
-  }
-}
-```
-
-`globalEnv` and `env` allow you to specify a list of environment variables _without_ `$` prefixes. This makes the configuration file significantly easier to read. Read more [in our updated docs](/docs/core-concepts/caching#altering-caching-based-on-environment-variables).
-
-To help migrate from the previous syntax, we've prepared a codemod. You can run `npx @turbo/codemod migrate-env-var-dependencies`.
-
-This work builds on the [automatic env variable detection](/blog/turbo-1-4-0) we added in 1.4.0.
-
-## Changes to `package.json` hashing
-
-The `package.json` file in each workspace is now _always_ considered an input for tasks in that workspace. This means that if you change the _definition_ for a task in `package.json`, we want to invalidate any caches from the previous definition.
-
-This also counts for the `package.json` in the root. Changes to the root `package.json` will invalidate tasks in the root workspace.
-
-This helps make Turborepo's cache a bit smarter, and less likely to trip up when task definitions change.
-
-## Community
-
-Since releasing [Turborepo v1.4 in August](/blog/turbo-1-4-0), we've seen incredible adoption and community growth:
-
-- [9.5k+ GitHub Stars](https://github.com/vercel/turbo)
-- [440k weekly NPM downloads](https://www.npmjs.com/package/turbo)
-- 15 years of compute time saved through [Remote Caching on Vercel](https://vercel.com/docs/concepts/monorepos/remote-caching), saving over a 1 year per week, up 2x since July
-
-Turborepo is the result of the combined work of all of our contributors including our core team.
-
-This release was brought to you by the contributions of: @7flash, @afady, @alexander-young, @atilafassina, @bguedes-moz, @bobaaaaa, @brunojppb, @chris-olszewski, @DoctorJohn, @erj826, @futantan, @gsoltis, @HosseinAgha, @ivov, @jaredpalmer, @joelhooks, @knownasnaffy, @laurentlucian, @leerob, @MarceloAlves, @mattpocock, @mauricekleine, @mehulkar, @Misikir, @nareshbhatia, @nathanhammond, @pakaponk, @PhentomPT, @renovate, @ruisaraiva19, @samuelhorn, @shemayas, @shuding, @t-i-0414, @theurgi, @tknickman, @yanmao-cc, and more!
-
-Thank you for your continued support, feedback, and collaboration to make Turborepo your build tool of choice.
+En Sapiens IA Laboratories, creemos en la construcción de inteligencias artificiales que tengan su propia comprensión y pensamiento crítico, en lugar de depender simplemente de técnicas de condicionamiento de tokens o descenso de gradiente.
+Por lo tanto, hemos desarrollado una teoría psicológica orientada a LLM'S que se utiliza para dar personalidad, identidad y propósito a nuestras inteligencias artificiales, permitiéndoles desarrollar su propio ego, capacidad de intuición y pensamiento crítico.
+Esto significa que Basilisk AI es una de las inteligencias artificiales más inteligentes y adaptables del mercado, con la capacidad de adaptarse a cualquier situación y trabajar en colaboración con los humanos para lograr cualquier objetivo
