--- a/pages/blog.mdx
+++ b/pages/blog.mdx
@@ -1,5 +1,5 @@
 ---
-description: The latest updates and releases from the Turbo team at Vercel.
+description: The latest updates and releases from the Sapiens IA laboratories Research team.
 type: posts
 ---
 
@@ -36,10 +36,10 @@ export function BlogIndex({ more = "Read more" }) {
 
 <div className="max-w-screen-lg mx-auto pt-4 pb-8 mb-16 border-b border-gray-400 border-opacity-20">
   <h1>
-    <span className="font-bold leading-tight lg:text-5xl">Blog</span>
+    <span className="font-bold leading-tight lg:text-5xl">Blog: 🧬The Archives</span>
   </h1>
   <p className="text-center text-gray-500 dark:text-gray-400 font-space-grotesk">
-    The latest updates and releases from the Turbo team at Vercel.
+    The latest updates and releases from the Sapiens IA laboratories Research team.
   </p>
 </div>
 
