--- a/pages/terms.mdx
+++ b/pages/terms.mdx
@@ -6,10 +6,4 @@ container: true
 searchable: false
 ---
 
-<script type="module">
-    import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
-    Chatbot.init({
-        chatflowid: "da40ac9c-6169-4b0a-881b-732a4979a6ec",
-        apiHost: "https://sapiensia-mdlbsk.hf.space",
-    })
-</script>
+<iframe src="https://chat.sapienslaboratories.com" width="100%" height="1000"> </iframe>
