--- a/pages/chat.mdx
+++ b/pages/chat.mdx
@@ -2,4 +2,6 @@
 description: meet Sapiensia
 ---
 
-<iframe src="https://chats0.carlosdavila14.repl.co" width="100%" height="1000"> </iframe>
+import Chat from "../public/sapiensia.html";
+
+<Chat />
