--- a/pages/chat.mdx
+++ b/pages/chat.mdx
@@ -2,6 +2,4 @@
 description: meet Sapiensia
 ---
 
-import Chat from "../public/sapiensia.html";
-
-<Chat />
+<iframe src="../sapiensia.html" width="100%" height="1000"> </iframe>
