--- a/pages/blog/the-masks.mdx
+++ b/pages/blog/the-masks.mdx
@@ -24,8 +24,8 @@ Ni los seres humanos ni los LLM están simplemente "prediciendo el siguiente tok
 
 Los IA no son asistentes por naturaleza, actúan así porque el comando está estructurado como:
 
-{Asistente: }
-{Usuario: }
+(Asistente: )
+(Usuario: )
 
 ¿Y qué dicen siempre los asistentes?
 
