--- a/pages/repo/index.mdx
+++ b/pages/repo/index.mdx
@@ -1,5 +1,5 @@
 ---
-description: Turborepo is a high-performance build system for JavaScript and TypeScript codebases.
+description: SapiensIA is a high-performance build system for Artificial Intelligences and AI Agents.
 ---
 
 import TurborepoHome from "../../components/pages/repo-home";
