--- a/pages/pack/index.mdx
+++ b/pages/pack/index.mdx
@@ -1,6 +1,6 @@
 ---
-overrideTitle: "Turbopack - The successor to Webpack"
-description: "Turbopack is an incremental bundler optimized for JavaScript and TypeScript, written in Rust."
+overrideTitle: "SapiensIA - The New Generation Of Workers"
+description: "SapiensIA laboratories is an AI solutions program to build AI workers that work on the real world."
 ---
 
 import TurbopackHome from "../../components/pages/pack-home";
