--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,5 +1,5 @@
 ---
-description: "Turbo is an incremental bundler and build system optimized for JavaScript and TypeScript, written in Rust."
+description: "Sapiens IA Laboratories is an AI solutions company focused on building the next generation of workers, Artificial Intelligences that can work, perform, create, speak and think by themselves"
 ---
 
 import LandingPage from "../components/pages/landing";
