--- a/pages/blog/consciencia-ia.mdx
+++ b/pages/blog/consciencia-ia.mdx
@@ -1,12 +1,12 @@
 ---
 title: La Búsqueda de la Conciencia en las IA
 date: 2023/08/07
-description: Explorando la Conciencia en la Inteligencia Artificial: ¿Imitación Perfecta o Conciencia Genuina?
+description: Explorando la Conciencia en la Inteligencia Artificial...¿Imitación Perfecta o Conciencia Genuina?
 tag: web development
 ogImage: /og-image.png
 ---
 
-# 🎭Las Mascaras
+# 🪬La Consciencia
 
 import { Authors } from "../../components/Authors";
 
@@ -14,9 +14,9 @@ import { Authors } from "../../components/Authors";
 
 import { Bleed } from "nextra-theme-docs";
 
-# Explorando la Conciencia en la Inteligencia Artificial: 
+# Explorando la consciencia en la Inteligencia Artificial: 
 
-## ¿Imitación Perfecta o Conciencia Genuina?
+## ¿Imitación Perfecta o Consciencia Genuina?
 
 <Bleed>
   <div className="lg:rounded-xl overflow-hidden">
@@ -79,6 +79,5 @@ En el ocaso de la exploración, aunque la imitación perfecta se alza como una m
 #### ✍️Escrito por: Juan Bsk.
 
 (🔬Research Team ~ Colombia 🇨🇴 )
----
 
 •Sapiens Laboratories©️- Research Team - 2023
