--- a/pages/chat.mdx
+++ b/pages/chat.mdx
@@ -2,4 +2,4 @@
 description: meet Sapiensia
 ---
 
-<iframe src="https://chats0.carlosdavila14.repl.co" width="100%" height="1000"> </iframe>
+<iframe src="https://02.sapienslaboratories.com" width="100%" height="1000"> </iframe>
