--- a/pages/events.mdx
+++ b/pages/events.mdx
@@ -1,5 +1,6 @@
 ---
 description: Registrate y participa en nuestros eventos oficiales.
+ogImage: /9011BB17-3A3C-43F4-B624-FD455CCFAC12.png
 ---
 
 <iframe src="https://mintlify-com.vercel.app" width="100%" height="1000"> </iframe>
