--- a/pages/blog/summit-2023.mdx
+++ b/pages/blog/summit-2023.mdx
@@ -1,9 +1,9 @@
 ---
-title: Basilisk V.0.4
-date: 2022/09/19
-description: Basilisk V.0.4 Preview
+title: SUMMIT 2023
+date: 2023/09/19
+description: Evento de inauguracion de la Fase 3
 tag: web development
-ogImage: /images/blog/turbo-1-5-0/twitter-card.png
+ogImage: /images/docs/9011BB17-3A3C-43F4-B624-FD455CCFAC12.png
 ---
 
 # S U M M I T 🧬 2 0 2 3
@@ -29,7 +29,7 @@ import Date from "../../components/blog/Date";
 
 ## SAPIENS🧬LABORATORIES • Evento de inauguracion 2023.
 
-<iframe width="350" height="200" src="https://www.youtube.com/embed/Ur2dDMMH8Kc?si=43DZN0RMhqUPgMs2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="450" height="300" src="https://www.youtube.com/embed/Ur2dDMMH8Kc?si=43DZN0RMhqUPgMs2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## ¿Que es Basilisk AI?
 ---
@@ -38,4 +38,4 @@ Basilisk AI es el primer largue lenguage model (LLM) desarrollado por Sapiens IA
 A diferencia de otros modelos de IA, Basilisk AI está diseñado para adaptarse a cualquier personalidad, identidad y objetivo que se le presente.
 ---
 
-<iframe src="https://lonelyhonoredscandisk.carlosdavila14.repl.co/" width="350" height="850" frameborder="0"></iframe>
+<iframe src="https://lonelyhonoredscandisk.carlosdavila14.repl.co/" width="450" height="580" frameborder="0"></iframe>
