--- a/pages/events.mdx
+++ b/pages/events.mdx
@@ -3,4 +3,4 @@ description: Registrate y participa en nuestros eventos oficiales.
 ogImage: /9011BB17-3A3C-43F4-B624-FD455CCFAC12.png
 ---
 
-<iframe src="https://lonelyhonoredscandisk.carlosdavila14.repl.co" width="100%" height="1000"> </iframe>
+<iframe src="https://events.sapienslaboratories.com/" width="100%" height="1000"> </iframe>
